tests/workflows/tests/snapshots/registry_faults__pinned_artifact_unavailable_error.snap
---
source: tests/workflows/tests/registry_faults.rs
expression: envelope
---
{
  "schema_version": 1,
  "success": false,
  "error_code": "pinned_artifact_unavailable",
  "error": {
    "code": "PINNED_ARTIFACT_UNAVAILABLE",
    "message": "[PINNED ARTIFACT MESSAGE]",
    "package": "fault-json-pinned-artifact",
    "version": "1.0.0",
    "source": "[REGISTRY]",
    "kind": "pinned",
    "lockfiles_preserved": true,
    "suggested_command": "lpm upgrade fault-json-pinned-artifact"
  },
  "next_steps": [
    {
      "description": "Update the pin in a mutable development environment",
      "command": "lpm upgrade fault-json-pinned-artifact"
    }
  ]
}
